     your own view was shared (bug #10994)
   * slight tuning of hp/xp bar: not anymore hidden under leader crown and the
     HP bar's scaling is changed (now the cap is ~80hp instead of 70)
   * new red footprints images for move cost > 3
 * WML engine:
   * fixed an off by one error in [scroll_to]
   * unified the two different max_loop counters and used highest maximum
     (65536).
 * terrains:
   * added stone bridge terrain over lava and chasms.
 * miscellaneous and bug fixes:
   * Fixed networking not to timeout with slow connections but timeout faster
     with lost connection (partialy fix bug #10967)
   * Fixed client side ping timeout check if downloading or uploading
   * Moved destruction of conditional object before the mutex. This should 
     fix random crash in network disconnect.
   * Fixed reference to invalid pointer in attack::attack
   * pressing shift affects acceleration immediately
   * More gcc 4.3 fixed
   * Remember cleared hotkey
   * Added some toys&whisles to unit tests
   * Added networking unit tests
   * Optimized MP chat log building
   * Hide race sections having only units with "hide_help=true"
   * Fixed ai handling of unit without attacking weapons (bug #10886)
   * Optimize roads placing of random map
   * when a unit miss an animation, the engine will base the replacement on
     the standing animation instead of the standing frame
   * enabled caching images for lowmem unconditionally since it seems to save
     memory (bug #11022)
   * disable stricker terrain validation, since a rogue scenario may avoid 
     somebody to create any game (bug #11024)

Version 1.3.15:
 * language and i18n:
   * updated translations: Catalan, Chinese, Czech, Danish, Dutch, French,
     German, Hungarian, Italian, Lithuanian, Polish, Spanish, Turkish
   * updated DejaVuSans to 2.23
 * graphics:
   * new elvish portraits by Kitty
 * multiplayer:
   * revised maps: Cynsaun Battlefield